--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="">
 	
 <meta name="google-site-verification" content="qQiRqESJk_YqqT_ewfXP-SUzyIMrIq75NxTpUneNDRg" />
-    <title>Bigbos4d: Situs Judi Online Gacor Akun Jp Bigbos4d Resmi</title>
+    <title>Bigbos4d: Situs Judi Online Gacor Akun Jp Big bos4d Resmi</title>
       <meta name="description" content="Bigbos4d adalah situs judi online gacor terbaik di indonesia dengan minat banyak pemain yang ingin merasakan maxwin dengan akun jp bigbos4d resmi." >
 	  <meta name="keywords" content="Bigbos4d, daftar Bigbos4d, link Bigbos4d, situs Bigbos4d, slot resmi, Slot Gacor">
       <link rel="canonical" href="http://bigbos4dresmi.maskoolin.com/">
-      <link rel="amphtml" href="https://gacoerkali.xyz/amp/bigbos4d/">
+      <link rel="amphtml" href="https://gacoerkali.xyz/amp/bigbos4d">
       <meta content="id_ID" property="og:locale">
       <meta content="website" property="og:type">
       <meta content="https://c236d0.myshopify.com/cdn/shop/files/serbu4d_1.png?v=1702987568" property="og:image" />
